<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Toolbar -->
    <string name="app_name">Scheduled Recorder</string>
    <string name="action_licenses">Licenses</string>
    <string name="action_settings">Settings</string>
    <string name="action_save">Save</string>
    <string name="tab_title_record">Record</string>
    <string name="tab_title_saved_recordings">Files</string>
    <string name="tab_title_scheduled_recordings">Schedule</string>
    <string name="tab_title_remote">Remote</string>

    <!-- Toasts -->
    <string name="toast_recording_start">Recording started</string>
    <string name="toast_recording_saved">Recording saved</string>
    <string name="toast_recording_deleted">Recording deleted</string>
    <string name="toast_recording_deleted_error">Error deleting the recording</string>
    <string name="toast_file_renamed">File renamed</string>
    <string name="toast_file_renamed_error">Error renaming the file</string>
    <string name="toast_file_exists">The file already exists. Please choose a different file name.</string>
    <string name="toast_scheduledrecording_timeerror_start_after_end">Start time after end time</string>
    <string name="toast_scheduledrecording_timeerror_past">Recording scheduled in the past</string>
    <string name="toast_scheduledrecording_timeerror_already_scheduled">Another recording has already been scheduled for that time!</string>
    <string name="toast_scheduledrecording_saved_error">Error. Check that the time is compatible with other recordings.</string>
    <string name="toast_permissions_denied">The app won\'t work without the requested permissions!</string>
    <string name="toast_undo_delete_error">Error! The recording can\'t be restored</string>


    <!-- Notifications -->
    <string name="notification_recording">Recording...</string>
    <string name="notification_recording_text">SoundRecorder is currently recording...</string>
    <string name="notification_scheduling">Scheduling...</string>
    <string name="notification_scheduling_text">Scheduling next recording...</string>

    <!-- Dialogs -->
    <string name="dialog_title_delete">Confirm Delete...</string>
    <string name="dialog_text_delete">Are you sure you would like to delete this file?</string>
    <string name="dialog_text_delete_generic">Are you sure you would like to delete the selected item?</string>
    <string name="dialog_title_licenses">Open Source Licenses</string>
    <string name="dialog_title_share">Share File</string>
    <string name="dialog_title_rename">Rename File</string>
    <string name="dialog_title_options">Options</string>

    <string name="dialog_file_share">Share File</string>
    <string name="dialog_file_rename">Rename File</string>
    <string name="dialog_file_delete">Delete File</string>
    <string name="dialog_file_edit">Edit</string>
    <string name="dialog_item_delete">Delete Item</string>
    <string name="dialog_action_cancel">Cancel</string>
    <string name="dialog_action_ok">OK</string>
    <string name="dialog_action_yes">Yes</string>
    <string name="dialog_action_no">No</string>

    <string name="no_saved_recordings_message">No saved recordings</string>
    <string name="pause_recording_button">Pause</string>
    <string name="resume_recording_button">Resume</string>
    <string name="default_file_name">myrec</string>
    <string name="record_prompt">Tap to start recording</string>
    <string name="record_in_progress">Recording…</string>

    <string name="send_to">Send to</string>

    <!-- SnackBar -->
    <string name="snackbar_undo">Undo</string>
    <string name="snackbar_recording_deleted">Recording deleted</string>

    <!-- Fragments -->
    <string name="frag_sched_title">Scheduled recordings</string>
    <string name="frag_sched_scheduled_recording">scheduled recording</string>
    <string name="frag_sched_no_recordings">no scheduled recordings</string>
    <string name="act_addsched_schedule_recording">Schedule recording</string>

    <string name="audioview_recording">recording...</string>
    <string name="audioview_waiting">waiting...</string>

    <string name="new_message_notification_title_template">New message: %1$s</string>

    <string name="remote_no_signin">You are not signed-in. Please sign in and register your devices to start remote recording.</string>
    <string name="remote_sign_in_button">Sign-in</string>

    <!-- ScheduledRecordingDetailsActivity -->
    <string name="no_data">no data...</string>

    <!-- Actions -->
    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>

    <!-- Preferences -->
    <string name="pref_high_quality_key">pref_high_quality</string>
    <string name="pref_high_quality_title">Enable High Quality Recording</string>
    <string name="pref_high_quality_desc">Record in CD Quality</string>
    <string name="pref_about_key">pref_about</string>
    <string name="pref_about_title">About</string>
    <string name="pref_about_desc">v%s</string>
    <string name="mic_icon">mic_icon</string>

    <!-- General -->
    <string name="image_content_description">content_description</string>

    <!-- App's info -->
    <string name="info_appname">Scheduled Recorder</string>
    <string name="info_version">ver. 1.0</string>
    <string name="info_desc">Audio recorder with scheduled recordings</string>
    <string name="info_author">by iClaude</string>
    <string name="info_details_title">Nerd\'s details</string>
    <string name="info_details_content">This app is open source. The app implements (or at least tries to...) the MVVM pattern with clean architecture using Android Data Binding Library and architecture components (Room, ViewModel, LiveData).</string>
    <string name="info_github_title">GitHub repository</string>
    <string name="info_github_link">https://github.com/iClaude/ScheduledRecorder</string>
    <string name="record_elapsed">elapsed:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
